Add Swagger endpoint to API 🎉

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
   <title>Document</title>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
   <h1>To infinity and beyond!</h1>
   <p>
     Check out the <a href="/api">api</a>.
+  </p>
+  <p>
+    Check out the <a href="/swagger">documentation</a>.
   </p>
 </body>
 </html>
